# quickgrab

./: .gitignore  pom.xml
cpp/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cpp/data/: cacert.pem  database.json  database.sample.json  kdlproxy.json  kdlproxy.sample.json
cpp/include/quickgrab/controller/: AuthController.hpp  GrabController.hpp  ProxyController.hpp  QueryController.hpp  StatisticsController.hpp  SubmitController.hpp  ToolController.hpp  UserController.hpp
cpp/include/quickgrab/model/: Buyer.hpp  Request.hpp  Result.hpp
cpp/include/quickgrab/proxy/: KdlProxyClient.hpp  ProxyPool.hpp
cpp/include/quickgrab/repository/: BuyersRepository.hpp  DatabaseConfig.hpp  MySqlConnectionPool.hpp  RequestsRepository.hpp  ResultsRepository.hpp  SqlUtils.hpp
cpp/include/quickgrab/server/: HttpServer.hpp  RequestContext.hpp  Router.hpp
cpp/include/quickgrab/service/: AuthService.hpp  GrabService.hpp  MailService.hpp  ProxyService.hpp  QueryService.hpp  StatisticsService.hpp
cpp/include/quickgrab/util/: CommonUtil.hpp  HttpClient.hpp  JsonResponse.hpp  JsonUtil.hpp  Logging.hpp  WeidianParser.hpp
cpp/include/quickgrab/workflow/: GrabWorkflow.hpp
cpp/src/: main.cpp
cpp/src/controller/: AuthController.cpp  GrabController.cpp  ProxyController.cpp  QueryController.cpp  StatisticsController.cpp  SubmitController.cpp  ToolController.cpp  UserController.cpp
cpp/src/proxy/: KdlProxyClient.cpp  ProxyPool.cpp
cpp/src/repository/: BuyersRepository.cpp  DatabaseConfig.cpp  MySqlConnectionPool.cpp  RequestsRepository.cpp  ResultsRepository.cpp
cpp/src/server/: HttpServer.cpp  Router.cpp
cpp/src/service/: AuthService.cpp  GrabService.cpp  MailService.cpp  ProxyService.cpp  QueryService.cpp  StatisticsService.cpp
cpp/src/util/: CommonUtil.cpp  HttpClient.cpp  JsonUtil.cpp  Logging.cpp  WeidianParser.cpp
cpp/src/workflow/: GrabWorkflow.cpp
cpp/static/: cart.html  guide.html  index.html  link.html  login.html  requests.html  results.html  user.html
cpp/static/css/: styles copy.css
cpp/static/js/: api-handler.js  auth.js  chart.umd.min.js  form-handler.js  list-handler.js  main.js  modal-handler.js  orderTemplate-handler.js  prediction-handler.js  statistics.js  time-handler.js  user.js  util.js
(+58 files in other folders)
